<resources>
    <string name="app_name">Personal Expenses</string>
    <string name="fab_content_desc">FAB Button</string>
    <string name="personal_page_title">Personal expenses</string>
    <string name="add_expense_page_title">Add expense</string>
    <string name="title_text">Title</string>
    <string name="title_hint">Insert title here...</string>
    <string name="amount_text">Amount €</string>
    <string name="amount_hint">Insert amount here...</string>
    <string name="select_color_text">Select colour</string>
    <string name="total_text">"Total spending: "</string>
    <string name="expenses_text">List of expenses:</string>
</resources>